# squish

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac
Compress/: BasicTypes.h  BitIO.cpp  BitIO.h  Codec.h  CompilerExtras.h  Compress.cpp  Lzw.cpp  Lzw.h  Makefile  Makefile.am  Makefile.in  Squish.cpp  Tests.cpp  Util.h  squish
Compress/.deps/: BitIO.Po  Compress.Po  Lzw.Po
Compress/TestData/: Lzw.out  alice.out
Compress/Tests/: Lzw.out  alice.out  alice.txtout
src/: .clang_complete  Archive.h  BasicTypes.h  BitIO.cpp  BitIO.h  Codec.h  DebugLog.h  FindPrimesForHash.cpp  Lzw.cpp  Lzw.h  LzwFast.cpp  LzwFast.h  Makefile.am  Makefile.in  Primes.cpp  Primes.h  Squish.cpp  Tests.bak  Tests.cpp  Util.h  test.arc
testdata/: Lzw.out  Lzw.txt  Makefile.am  Makefile.in  alice.out  nullstr.txt
