bin_PROGRAMS = squish
squish_SOURCES = Squish.cpp Util.h BitIO.cpp BitIO.h Lzw.cpp Lzw.h Archive.h Archive.cpp DebugLog.h BasicTypes.h Codec.h CompilerExtras.h LzwFast.h LzwFast.cpp 
testsuite_SOURCES = Tests.cpp Util.h BitIO.cpp BitIO.h Lzw.cpp Lzw.h Archive.h Archive.cpp DebugLog.h BasicTypes.h Codec.h LzwFast.h LzwFast.cpp
check_PROGRAMS = testsuite
TESTS = testsuite
